--- a/public/scss/partials/_general.scss
+++ b/public/scss/partials/_general.scss
@@ -768,3 +768,34 @@ div.pagination {
 .breadcrumb > li + li:before {
   content: " / ";
 }
+
+.newsletter-banner {
+	padding: 7px;
+	background-color: white;
+	overflow: auto;
+	width: 100%;
+	margin-top: 5px;
+	@media screen and (max-width: $screen-xs-max) {
+		margin-top: 90px;
+	}
+	p {
+		float: left;
+		line-height: 30px;
+		font-size: 1.3em;
+		font-weight: bolder;
+		margin: 0;
+		text-align: center;
+
+	}
+	.form-group {
+		margin: 0;
+	}
+	a.close-newsletter {
+		float: left;
+		height: 28px;
+		width: 28px;
+		background: url(../img/mobile-menu-close.png) no-repeat center center;
+    	background-size: 90%;
+    	opacity: 1;
+	}
+}
