--- a/public/scss/partials/_page-hairfie.scss
+++ b/public/scss/partials/_page-hairfie.scss
@@ -1,18 +1,21 @@
 /*////////////////////////////////
       P A G E  H A I R F I E
 ////////////////////////////////*/
-.container.hairfie-newsletter {
-	margin-top: 40px;
-	@media screen and (max-width: $screen-xs-max) {
-	   margin-top: 100px;
- 	}
+.hairfie-newsletter {
+ 	margin-bottom: 5px;
+ 	margin-left: -15px;
+ 	margin-right: -15px;
  	.newsletter-banner {
  		p {
- 			@extend .col-xs-12 .col-sm-6 .col-offset-md-1 .col-md-4;
+ 			@extend .col-xs-12,.col-sm-6,.col-offset-md-1,.col-md-4;
  		}
  	}
 }
 .hairfie-singleView#content {
+	margin: 40px auto;
+	@media screen and (max-width: $screen-xs-max) {
+	   	margin-top: 100px;
+ 	}
 	min-height: #{"calc(100vh - 60px)"};
 	height: 100%;
 	position: relative;
@@ -29,7 +32,6 @@
 	}
 
 	.single-view {
-		margin: 5px auto;
 		background-color: white;
 		> .col-sm-6:first-child {
 			padding-right: 0;
