--- a/public/scss/partials/_general.scss
+++ b/public/scss/partials/_general.scss
@@ -774,15 +774,18 @@ div.pagination {
 	background-color: white;
 	overflow: auto;
 	width: 100%;
-	p {
-		line-height: 30px;
-		font-size: 1.3em;
-		font-weight: bolder;
-		margin: 0;
+	p.newsletter-legend {
+		line-height: 34px;
+		font-weight: 400;
+		margin-bottom: 0;
 		text-align: center;
 
 	}
 	.form-group {
 		margin: 0;
+	}
+	.btn-addon {
+		color: white;
+		background-color: $book !important;
 	}
 }
