--- a/public/scss/partials/_page-hairfie.scss
+++ b/public/scss/partials/_page-hairfie.scss
@@ -2,12 +2,13 @@
       P A G E  H A I R F I E
 ////////////////////////////////*/
 .hairfie-newsletter {
- 	margin-bottom: 5px;
+ 	margin-bottom: 10px;
  	margin-left: -15px;
  	margin-right: -15px;
  	.newsletter-banner {
  		p {
- 			@extend .col-xs-12,.col-sm-6,.col-offset-md-1,.col-md-4;
+ 			@extend .col-xs-12,.col-sm-6;
+ 			font-size: 1.7em !important;
  		}
  	}
 }
