--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11593,6 +11593,7 @@ section.home-footer .row > div {
 	   P A G E  S E A R C H
 ////////////////////////////////*/
 #content.search .hairfie-search-newsletter {
+  margin-top: -5px;
   margin-bottom: 10px;
   padding-left: 5px;
   padding-right: 5px; }
