--- a/public/scss/partials/_page-search.scss
+++ b/public/scss/partials/_page-search.scss
@@ -3,6 +3,7 @@
 ////////////////////////////////*/
 #content.search {
 	.hairfie-search-newsletter {
+		margin-top: -5px;
 		margin-bottom: 10px;
  		padding-left: 5px;
  		padding-right: 5px;
