--- a/public/scss/partials/_page-search.scss
+++ b/public/scss/partials/_page-search.scss
@@ -49,6 +49,11 @@
 
 		.search-content {
 			@include fullWidthBg($bg3);
+			/*.tabpanel {
+				div.row {
+					margin-bottom: 15px;
+				}
+			}*/
 		}
 
 		.header-part {
