--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12505,16 +12505,6 @@ section.home-footer .row > div {
           text-decoration: underline; }
           .hairfie-singleView#content .single-view > div:nth-child(2) .salon-infos p a:hover {
             color: #343434; }
-        .hairfie-singleView#content .single-view > div:nth-child(2) .salon-infos .tags {
-          margin-left: -3px; }
-          .hairfie-singleView#content .single-view > div:nth-child(2) .salon-infos .tags .tag {
-            margin-bottom: 2px; }
-            .hairfie-singleView#content .single-view > div:nth-child(2) .salon-infos .tags .tag a {
-              color: white !important;
-              font-size: 1.4em;
-              text-decoration: none; }
-              .hairfie-singleView#content .single-view > div:nth-child(2) .salon-infos .tags .tag a:hover {
-                text-decoration: none; }
         .hairfie-singleView#content .single-view > div:nth-child(2) .salon-infos .likes {
           padding: 0;
           padding-top: 5px; }
@@ -12541,6 +12531,16 @@ section.home-footer .row > div {
               left: 0; }
           .hairfie-singleView#content .single-view > div:nth-child(2) .salon-infos .likes a:last-child:after {
             width: calc(100% - 30px); }
+    .hairfie-singleView#content .single-view .tags {
+      margin-left: -3px; }
+      .hairfie-singleView#content .single-view .tags .tag {
+        margin-bottom: 6px; }
+        .hairfie-singleView#content .single-view .tags .tag a {
+          color: white !important;
+          font-size: 1.4em;
+          text-decoration: none; }
+          .hairfie-singleView#content .single-view .tags .tag a:hover {
+            text-decoration: none; }
     .hairfie-singleView#content .single-view .like-group {
       width: 100%;
       height: 65px;
