--- a/public/scss/partials/_page-search.scss
+++ b/public/scss/partials/_page-search.scss
@@ -305,6 +305,10 @@
 			}
 		}
 		.tab-pane#salons, .tab-pane#adom {
+			a.extend-search {
+				font-weight: 400;
+				font-size: 1.5em;
+			}
 			.image-bloc {
 				overflow: hidden;
 			}
