--- a/public/scss/partials/_general.scss
+++ b/public/scss/partials/_general.scss
@@ -273,15 +273,12 @@ ul {
 				border-right: 0;
 			}
 			.input-group-addon {
-			    border: none;
-			    border-radius: 0;
 			    background: transparent;
-				border: 1px solid #e2e3e6;
 				background: url(../img/icon-location.png) no-repeat center center;
 				width: 60px;
 				background-size: 40%;
-				border-right: 1px solid #e2e3e6;
-				border-right: 0;
+			    border: 2px solid #e6e6e6;
+			    border-left-width: 1px;
 			}
 		}
 	&.open {
