--- a/public/scss/partials/_general.scss
+++ b/public/scss/partials/_general.scss
@@ -266,15 +266,14 @@ ul {
 	position: relative;
 		div.input-group {
 			float: left;
-			background: white;
 			input {
 				width: calc(100% + 5px);
 				margin-right: 0;
 				border-right: 0;
 			}
 			.input-group-addon {
-			    background: transparent;
 				background: url(../img/icon-location.png) no-repeat center center;
+				background-color: white;
 				width: 60px;
 				background-size: 40%;
 			    border: 2px solid #e6e6e6;
@@ -379,6 +378,22 @@ ul {
 		height: 40px;line-height: 40px;
 		border-width: 1px;
 
+	}
+	div.input-group {
+		float: left;
+		input {
+			width: calc(100% + 5px);
+			margin-right: 0;
+			border-right: 0;
+		}
+		.input-group-addon {
+			background: url(../img/icon-location.png) no-repeat center center;
+			background-color: white;
+			width: 60px;
+			background-size: 40%;
+		    border: 2px solid #e6e6e6;
+		    border-left-width: 1px;
+		}
 	}
 	.btn-red {
 		height:40px;
