--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6653,7 +6653,7 @@ button.close {
   .btn-reddit:hover, .btn-reddit:focus, .btn-reddit.focus, .btn-reddit:active, .btn-reddit.active,
   .open > .btn-reddit.dropdown-toggle {
     color: #000;
-    background-color: #bcddff;
+    background-color: #bcdeff;
     border-color: rgba(0, 0, 0, 0.2); }
   .btn-reddit:active, .btn-reddit.active,
   .open > .btn-reddit.dropdown-toggle {
@@ -6705,7 +6705,7 @@ button.close {
   .btn-tumblr:hover, .btn-tumblr:focus, .btn-tumblr.focus, .btn-tumblr:active, .btn-tumblr.active,
   .open > .btn-tumblr.dropdown-toggle {
     color: #fff;
-    background-color: #1c2d3f;
+    background-color: #1c2e3f;
     border-color: rgba(0, 0, 0, 0.2); }
   .btn-tumblr:active, .btn-tumblr.active,
   .open > .btn-tumblr.dropdown-toggle {
@@ -9443,7 +9443,7 @@ figure {
   .tag:hover {
     color: white;
     text-decoration: none;
-    background-color: #3f3f3f; }
+    background-color: #404040; }
   @media screen and (max-width: 767px) {
     .tag {
       margin-top: 5px; } }
@@ -11088,7 +11088,7 @@ section.home-footer .row > div {
       width: 100%;
       display: block; }
       .salon#content section.salon-content section .coiffeur p > a:hover {
-        color: #1a1a1a;
+        color: #1b1b1b;
         text-decoration: underline; }
     .salon#content section.salon-content section .table-price {
       border: 1px solid #f9f9f9;
