--- a/public/scss/partials/_general.scss
+++ b/public/scss/partials/_general.scss
@@ -381,18 +381,16 @@ ul {
 	}
 	div.input-group {
 		float: left;
+		padding-right: 15px;
 		input {
-			width: calc(100% + 5px);
-			margin-right: 0;
-			border-right: 0;
+			width: 100%;
+			padding-left: 15px;
 		}
 		.input-group-addon {
 			background: url(../img/icon-location.png) no-repeat center center;
 			background-color: white;
-			width: 60px;
+			width: 50px;
 			background-size: 40%;
-		    border: 2px solid #e6e6e6;
-		    border-left-width: 1px;
 		}
 	}
 	.btn-red {
