--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -13,15 +13,15 @@ body {
     overflow-x: hidden;
 }
 
-.landing header.hidden-xs, .headline, .searchbar.hidden-xs {
-    opacity: 0;
-}
+// .landing header.hidden-xs, .headline, .searchbar.hidden-xs {
+//     opacity: 0;
+// }
 
-.no-js {
-    .landing header.hidden-xs, .headline , .searchbar.hidden-xs {
-      opacity: 1;
-    }
-}
+// .no-js {
+//     .landing header.hidden-xs, .headline , .searchbar.hidden-xs {
+//       opacity: 1;
+//     }
+// }
 
 
 
