--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11646,11 +11646,13 @@ section.home-footer .row > div {
 	    P A G E  R E S A
 ////////////////////////////////*/
 #content.reservation, .review-confirmation {
-  padding-top: 50px;
   padding-bottom: 50px; }
   @media screen and (max-width: 991px) {
     #content.reservation, .review-confirmation {
-      padding-top: 130px; } }
+      padding-top: 75px; } }
+  @media screen and (min-width: 1200px) {
+    #content.reservation, .review-confirmation {
+      padding-top: 0px; } }
   #content.reservation .sidebar, .review-confirmation .sidebar {
     background: white;
     padding: 20px; }
