--- a/public/scss/partials/_page-salon.scss
+++ b/public/scss/partials/_page-salon.scss
@@ -1,36 +1,37 @@
 /*////////////////////////////////
 	   P A G E  S A L O N
 ////////////////////////////////*/
-#carousel-salon .carousel-inner .item {
-	height: 470px;
-	background: url(../img/placeholder-salon-img.jpg) no-repeat center center;
-	background-size: cover;
-	background: none;
 
-	@media screen and (max-width: $screen-xs-max) {
-		height: 320px;
-	}
-
-	img, a > img {
-  		margin: auto;
-	}
-
-	&.placeholder {
+.salon#content {
+	#carousel-salon .carousel-inner .item {
 		height: 470px;
 		background: url(../img/placeholder-salon-img.jpg) no-repeat center center;
 		background-size: cover;
-	}
+		background: none;
 
-	img {
-		background-repeat: no-repeat;
-	    background-size: cover;
-	    background-position: 50% 50%;
-	    background-color: #838B95;
-	    width: 100%;
-	    height: 100%;
+		@media screen and (max-width: $screen-xs-max) {
+			height: 320px;
+		}
+
+		img, a > img {
+	  		margin: auto;
+		}
+
+		&.placeholder {
+			height: 470px;
+			background: url(../img/placeholder-salon-img.jpg) no-repeat center center;
+			background-size: cover;
+		}
+
+		img {
+			background-repeat: no-repeat;
+		    background-size: cover;
+		    background-position: 50% 50%;
+		    background-color: #838B95;
+		    width: 100%;
+		    height: 100%;
+		}
 	}
-}
-.salon#content {
 	.main-content {
 		position: relative;
 		min-height: 100vh;
@@ -95,6 +96,17 @@
 			.horraires {
 				.opened, .closed {
 					font-weight: $semiBold;
+				}
+			}
+			.request-review {
+				font-weight: 400;
+				font-size: 1.6em;
+				color: $font-color;
+				margin-right: 5px;
+				text-decoration: underline;
+
+				@media screen and (max-width: $screen-md-max)  {
+					float: left !important;
 				}
 			}
 		}
@@ -442,14 +454,14 @@
 	}
 }
 
-.request-review {
-	font-weight: 400;
-	font-size: 1.6em;
-	color: $font-color;
-	margin-right: 5px;
-	text-decoration: underline;
+.salon#content.free {
 
-	@media screen and (max-width: $screen-md-max)  {
-		float: left !important;
-	}
+}
+
+.salon#content.basic {
+
+}
+
+.salon#content.premium {
+
 }
