--- a/public/scss/partials/_variables.scss
+++ b/public/scss/partials/_variables.scss
@@ -8,6 +8,7 @@ $border-color: #f9f9f9;
 $bg1: #fff;
 $bg2: #f0f0f1;
 $bg3: #f4f4f4;
+$bg4: #f8f8f8;
 $bgfooter: #353535;
 $grey: #c4c4c4;
 $darkgrey: #595959;
